--- a/.README.MD
+++ b/.README.MD
@@ -1,1 +1,10 @@
 # Layout
+
+1. Tabelka ( mailingi. 
+brak semantyczności html5)
+2. Float (left, right, none)- powinno się używać
+3. Positions ( absolute, relative, sticky, fixed, static-default )
+   - problemy z responsywnością
+   - ale to jest najwydajniejszy sposób na layout ( nie trzeba kalkulować zależności między elementami)
+4. Flexbox - recomended - css tricks
+5. Css grid- best one
